basic fonts added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="pizza__wrapper">
   <h2 class="pizza__title">
-    Мамма Міа!
+    Mamma Mia!
   </h2>
   <div class="pizza__slice"></div>
   <p class="pizza__description">
-    Click on pizza slice to continue
+    Click here to continue
   </p>
 </div>
 
