--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./assets/styles/fonts";
+@import "./assets/styles/variables";
+
 body {
-  background-color: azure;
+  background-color: $color-azure;
 }
