new lazy loading module added

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -5,6 +5,7 @@ $font-rise-n-shine: "Rise_Shine";
 // colors
 $color-red: #D84A34;
 $color-azure: #F3FFFF;
+$color-black: #151515;
 
 // durations
 $transition-duration: .4s;
