--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,4 +1,4 @@
-@import "../assets/styles/variables";
+@import "../../assets/styles/variables";
 
 .pizza {
   &__wrapper {
@@ -8,28 +8,36 @@
   }
 
   &__title {
-    width: 100%;
+    margin: 100px auto 30px;
     font-family: $font-gist-light;
     font-size: 50px;
+    cursor: default;
   }
 
   &__slice {
     width: 30%;
     padding: 30% 40px 0 0;
     margin: 0 auto;
-    background: url('../assets/images/pizza-slice.svg') no-repeat;
+    background: url('../../assets/images/pizza-slice.svg') no-repeat;
     background-size: contain;
   }
 
   &__description {
-    width: 100%;
+    margin: 13px auto;
     font-family: $font-rise-n-shine;
     font-size: 13px;
     transition: color $transition-duration;
+    color: $color-black;
+    text-decoration: none;
 
     &:hover {
       cursor: pointer;
       color: $color-red;
     }
   }
+}
+
+.flex-row__wrapper {
+  width: 100%;
+  display: flex;
 }
