--- a/src/assets/styles/basic.scss
+++ b/src/assets/styles/basic.scss
@@ -1,6 +1,11 @@
 @import "../../assets/styles/variables";
 
 body {
-  background-color: $color-azure;
   color: $color-black;
+  background-color: $color-azure;
+}
+
+a {
+  color: $color-black;
+  text-decoration: none;
 }
