--- a/src/app/modules/+order/order/order.component.scss
+++ b/src/app/modules/+order/order/order.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   width: 100%;
+  font-family: $font-rise-n-shine;
 
   .available-pieces {
     &__wrapper {
@@ -9,16 +10,28 @@
       display: flex;
       flex-wrap: wrap;
       text-align: center;
+
+      &[hidden] {
+        display: none;
+      }
     }
 
     &__title {
       margin: 16px auto;
-      font-family: $font-rise-n-shine;
     }
 
     &__box {
       width: 100%;
       display: flex;
+
+      .available-pieces__action-wrapper {
+        margin-left: auto;
+        margin-right: auto;
+
+        .available-pieces__action-image {
+          background: url('../../../../assets/images/surprise.svg') no-repeat;
+        }
+      }
     }
 
     &__item {
@@ -31,6 +44,43 @@
 
       &:last-child {
         margin-right: auto;
+      }
+    }
+
+    &__action {
+      &-wrapper {
+        width: 15%;
+        margin: 30px auto 0;
+
+        &:first-child {
+          margin-left: 15%;
+
+          .available-pieces__action-image {
+            background: url('../../../../assets/images/chef.svg') no-repeat;
+          }
+        }
+
+        &:last-child {
+          margin-right: 15%;
+
+          .available-pieces__action-image {
+            background: url('../../../../assets/images/eat.svg') no-repeat;
+          }
+        }
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      &-image {
+        width: 100%;
+        padding: 100% 0 0;
+        background-size: contain;
+      }
+
+      &-description {
+        margin-top: 10px;
       }
     }
   }
